
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sinkerine", email = "git@15cm.net"},
]
dependencies = [
    "django>=4.2.2",
    "django-ninja>=0.22.2",
    "psycopg[binary]>=3.1.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "django-stubs>=4.2.3",
]
